# examples

./: .cursorignore  .gitignore  CLAUDE.md  README.md
.github/actions/setup/: action.yaml
.github/actions/setup-anchor/: action.yaml
.github/actions/setup-arcium/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/workflows/: clippy.yaml  fmt.yaml  random.yaml  test-examples.yaml
access_control/: Anchor.toml
access_control/encrypted-ixs/: Cargo.toml
access_control/encrypted-ixs/src/: lib.rs
access_control/programs/access_control/: Cargo.toml
access_control/programs/access_control/src/: lib.rs
access_control/tests/: access_control.ts
blackjack/: Anchor.toml  Arcium.toml  README.md  package.json  tsconfig.json
blackjack/confidential-ixs/src/: lib.rs
blackjack/encrypted-ixs/: Cargo.toml
blackjack/encrypted-ixs/src/: lib.rs
blackjack/multi_tx/: Anchor.toml
blackjack/multi_tx/encrypted-ixs/src/: lib.rs
blackjack/multi_tx/programs/blackjack/: Cargo.toml
blackjack/multi_tx/programs/multi_tx/: Cargo.toml
blackjack/multi_tx/tests/: blackjack.ts
blackjack/programs/blackjack/: Cargo.toml
blackjack/programs/blackjack/src/: lib.rs
blackjack/serialized/programs/blackjack/: Cargo.toml
blackjack/tests/: blackjack.ts
coinflip/: Anchor.toml  README.md  package.json
coinflip/encrypted-ixs/: Cargo.toml
coinflip/encrypted-ixs/src/: lib.rs
coinflip/programs/coinflip/: Cargo.toml
coinflip/programs/coinflip/src/: lib.rs
coinflip/tests/: coinflip.ts
dark_pool/: Anchor.toml  package.json
dark_pool/confidential-ixs/src/: lib.rs
dark_pool/programs/dark_pool/: Cargo.toml
dark_pool/programs/dark_pool/src/: lib.rs
dark_pool/tests/: dark_pool.ts
ed25519/: .gitignore  Anchor.toml  README.md  package.json
ed25519/encrypted-ixs/src/: lib.rs
ed25519/programs/ed_25519/: Cargo.toml
ed25519/programs/ed_25519/src/: lib.rs
ed25519/tests/: ed_25519.ts
predictor/: Anchor.toml  package.json
predictor/confidential-ixs/src/: lib.rs
predictor/encrypted-ixs/: Cargo.toml
predictor/encrypted-ixs/src/: lib.rs
predictor/programs/predictor/: Cargo.toml
predictor/programs/predictor/src/: lib.rs
predictor/tests/: predictor.ts
price_predict/: Anchor.toml
price_predict/programs/price_predict/: Cargo.toml
price_predict/programs/price_predict/src/: lib.rs
price_predict/tests/: price_predict.ts
prisoners_dilemma/: Anchor.toml  package.json
prisoners_dilemma/encrypted-ixs/src/: lib.rs
prisoners_dilemma/programs/prisoners_dilemma/: Cargo.toml
prisoners_dilemma/programs/prisoners_dilemma/src/: lib.rs
prisoners_dilemma/tests/: prisoners_dilemma.ts
rock_paper_scissors/: Anchor.toml  README.md
rock_paper_scissors/against-house/: Anchor.toml  README.md  package.json
rock_paper_scissors/against-house/programs/rock_paper_scissors_against_rng/: Cargo.toml
rock_paper_scissors/against-house/programs/rock_paper_scissors_against_rng/src/: lib.rs
rock_paper_scissors/against-house/tests/: rock_paper_scissors_against_rng.ts
rock_paper_scissors/against-player/: Anchor.toml  README.md  package.json
rock_paper_scissors/against-player/encrypted-ixs/: Cargo.toml
rock_paper_scissors/against-player/programs/rock_paper_scissors/: Cargo.toml
rock_paper_scissors/against-player/programs/rock_paper_scissors/src/: lib.rs
rock_paper_scissors/against-player/tests/: rock_paper_scissors.ts
rock_paper_scissors/confidential-ixs/: Cargo.toml
rock_paper_scissors/confidential-ixs/src/: lib.rs
rock_paper_scissors/encrypted-ixs/: Cargo.toml
rock_paper_scissors/encrypted-ixs/src/: lib.rs
rock_paper_scissors/programs/rock_paper_scissors/: Cargo.toml
rock_paper_scissors/programs/rock_paper_scissors/src/: lib.rs  utils.rs
rock_paper_scissors/tests/: rock_paper_scissors.ts
rock_paper_scissors_against_rng/tests/: rock_paper_scissors_against_rng.ts
scripts/: sync-version.sh
sealed_bid_auction/: Anchor.toml  Cargo.toml  README.md  package.json
sealed_bid_auction/confidential-ixs/: Cargo.toml
sealed_bid_auction/confidential-ixs/src/: lib.rs
sealed_bid_auction/encrypted-ixs/: Cargo.toml
sealed_bid_auction/encrypted-ixs/src/: lib.rs
sealed_bid_auction/programs/sealed_bid_auction/: Cargo.toml
sealed_bid_auction/programs/sealed_bid_auction/src/: lib.rs
sealed_bid_auction/tests/: sealed_bid_auction.ts
share_medical_records/: Anchor.toml  README.md  package.json
share_medical_records/encrypted-ixs/: Cargo.toml
share_medical_records/encrypted-ixs/src/: lib.rs
share_medical_records/programs/share_medical_records/: Cargo.toml
share_medical_records/tests/: share_medical_records.ts
sports_betting/: Anchor.toml
sports_betting/encrypted-ixs/: Cargo.toml
sports_betting/encrypted-ixs/src/: lib.rs
sports_betting/programs/sports_betting/: Cargo.toml
sports_betting/tests/: sports_betting.ts
time_capsule/: Anchor.toml
time_capsule/encrypted-ixs/src/: lib.rs
time_capsule/programs/time_capsule/: Cargo.toml
time_capsule/tests/: time_capsule.ts
voting/: .gitignore  Anchor.toml  Arcium.toml  README.md  package.json
voting/artifacts/: arcium_clock.json  arcium_pool.json  arcium_pool_ata.json  arx_ata_user_H15d_F2q1.json  arx_ata_user_ariZ_kFtP.json  arx_mint_H15d_F2q1.json  arx_mint_ariZ_kFtP.json  arx_node_H15d_F2q1.json  arx_node_ariZ_kFtP.json  cluster_acc_0.json  docker-compose-arx-env.yml  executing_pool_acc.json  mempool_acc.json  mxe_acc.json  node_config_0.toml  node_config_1.toml  operator_acc_H15d_F2q1.json  operator_acc_ariZ_kFtP.json  primary_stake_acc_H15d_F2q1.json  primary_stake_acc_ariZ_kFtP.json  reveal_result_raw_circuit_0.json  stake_queue_acc_H15d_F2q1.json  stake_queue_acc_ariZ_kFtP.json  vote_raw_circuit_0.json  wallet_acc_H15d_F2q1.json  wallet_acc_ariZ_kFtP.json
voting/artifacts/localnet/: identity_0.pem  node_0.json
voting/confidential-ixs/: Cargo.toml
voting/confidential-ixs/src/: lib.rs
voting/encrypted-ixs/: Cargo.toml
voting/encrypted-ixs/src/: lib.rs
voting/programs/voting/: Cargo.toml
voting/programs/voting/src/: lib.rs
voting/tests/: voting.ts
(+7 files in other folders)
