[package]
name = "blackjack"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blackjack"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"

arcium-client = { path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/client", default-features = false }
arcium-macros = { path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/macros" }
arcium-anchor = { path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/anchor" }
