[package]
name = "rock_paper_scissors"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rock_paper_scissors"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.2-alpha.1", registry = "arcium" }

arcium-client = { default-features = false, path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/client" }
arcium-macros = { path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/macros" }
arcium-anchor = { path = "/Users/arihantbansal/Developer/arcium/arcium-tooling/anchor" }
