[package]
name = "sealed_bid_auction"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sealed_bid_auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.2-alpha.1", registry = "arcium" }

arcium-client = { default-features = false, version = "0.1.37", registry = "arcium" }
arcium-macros = { version = "0.1.37", registry = "arcium" }
arcium-anchor = { version = "0.1.37", registry = "arcium" }
